Completely updated version.

--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -6,9 +6,9 @@
     <button (click)="exportHtml()">Export HTML</button>
   </div>
 
-  <email-editor
+  <angular-email-editor
     [options]="options"
     (loaded)="editorLoaded($event)"
     #editor
-  ></email-editor>
+  ></angular-email-editor>
 </div>
